# OCR_RAG

./: .env.example  README.md  main.py  main2.py  pyproject.toml  requirements.txt
vector_db/: chroma.sqlite3
