[project]
name = "rag-ocr"
version = "0.1.0"
description = "Handwritten PDF notes Q&A system using OCR + RAG (local, offline)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-chroma>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "ollama>=0.6.1",
    "chromadb>=0.6.0",
    "streamlit>=1.40.0",
    "pytesseract>=0.3.13",
    "pymupdf>=1.25.0",
    "pillow>=11.0.0",
    "fpdf2>=2.8.0",
    "langchain-classic>=1.0.1",
    "langchain-core>=1.2.17",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "faiss-cpu>=1.13.2",
    "unstructured>=0.21.5",
    "langchain-excel-loader>=0.1.1",
    "python-pptx>=1.0.2",
    "chardet>=7.0.1",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "torch>=2.10.0",
    "sentence-transformers>=5.2.3",
    "transformers>=5.3.0",
    "python-dotenv>=1.2.2",
    "tqdm>=4.67.3",
    "lxml>=6.0.2",
    "hf-xet>=1.3.2",
    "sse-starlette>=3.3.2",
    "rapidocr-onnxruntime>=1.4.4",
    "pdf2image>=1.17.0",
    "opencv-python>=4.13.0.92",
]
